--- a/src/app/products-grid/products-grid.component.html
+++ b/src/app/products-grid/products-grid.component.html
@@ -1,24 +1,29 @@
-<table class="table" style="width:100%;">
+<table id="products" class="table" style="width:100%;">
   <thead>
     <tr>
       <th>Name</th>
       <th>Description</th>
       <th>Category</th>
       <th>Model Name</th>
-      <th>ProductImage</th>      
+      <th>ProductImage</th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let item of productData">
       <td>{{item.Name}}</td>
       <td>{{item.Description}}</td>
-      <td>{{item.Category}}</td>      
+      <td>{{item.Category}}</td>
       <td>{{item.ModelName}}</td>
-      <td>{{item.ProductImage}}</td>      
+      <td><img src={{item.ProductImage}} style="width:50px;height:100px"></td>
       <td>
         <a style="cursor:pointer;" href="#">
           <span>Edit</span>
-        </a>        
+        </a>
+        <span>|</span>
+        <a style="cursor:pointer;" href="#">
+          <span>Delete</span>
+        </a>
       </td>
     </tr>
   </tbody>
