Changes for user login form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
-<products-grid></products-grid>
+<!--<products-grid></products-grid>-->
+
+
+<user-login></user-login>
