removed old bootstrap and added global api

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 <!--<products-grid></products-grid>-->
 
 
-<user-login></user-login><!--add in router outlet please-->
+<!--add in router outlet please-->
 
 <router-outlet></router-outlet>
 <!-- <header></header>
