added user and product registration

--- a/src/app/_layout/site-header/site-header.component.html
+++ b/src/app/_layout/site-header/site-header.component.html
@@ -10,7 +10,7 @@
             <a class="nav-link" routerLink="/">Home<small>(Site layout)</small></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/about">About<small>(Site layout)</small></a>
+            <a class="nav-link" routerLink="/productRegistration">Product Registration<small>(Site layout)</small></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="/login">Login Page<small>(No layout)</small></a>
